# hentai-dl

./: Cargo.toml  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/net/witch/hentaidownloader/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/witch/hentaidownloader/: API.kt  AuthPage.kt  MainActivity.kt  MainPage.kt  MainViewModel.kt
android/app/src/main/java/net/witch/hentaidownloader/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/net/witch/hentaidownloader/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore
ios/Hentai Downloader/: API.swift  ContentView.swift  Download.swift  Hentai_DownloaderApp.swift
ios/Hentai Downloader.xcodeproj/: project.pbxproj
src/: downloader.rs  lib.rs  service.rs  utils.rs  web.rs
src/parser/: houhuayuan.rs  mod.rs  telegraph.rs
web/: index.html
